https://github.com/Kramy/Project/issues/5

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,15 +4,33 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
     
+    <!-- Parámetros de contexto -->
+    <context-param>
+        <param-name>bootstrapVersion</param-name>
+        <param-value>${bootstrap.version}</param-value>
+    </context-param>
+    
+    <context-param>
+        <param-name>jqueryVersion</param-name>
+        <param-value>${jquery.version}</param-value>
+    </context-param>
+    
+    <context-param>
+        <param-name>fontAwesomeVersion</param-name>
+        <param-value>${font-awesome.version}</param-value>
+    </context-param>
+    
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>/WEB-INF/applicationContext.xml</param-value>
     </context-param>
     
+    <!-- Listeners -->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
     
+    <!-- Servlets -->
     <servlet>
         <servlet-name>dispatcher</servlet-name>
         <servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
