--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
         <hibernate.version>5.2.9.Final</hibernate.version>
         <hibernate.annotations.version>3.5.6-Final</hibernate.annotations.version>
         <postgresql.version>42.0.0</postgresql.version>
-        <webjars-locator.version>0.32-1</webjars-locator.version>
+        <!--<webjars-locator.version>0.32-1</webjars-locator.version>-->
         <bootstrap.version>3.3.7</bootstrap.version>
         <jquery.version>1.12.4</jquery.version>
         <font-awesome.version>4.7.0</font-awesome.version>
@@ -90,11 +90,11 @@
         </dependency>
         
         <!-- Buscador de dependencias -->
-        <dependency>
+<!--        <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>webjars-locator</artifactId>
             <version>${webjars-locator.version}</version>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
     <build>
@@ -117,6 +117,17 @@
                 <version>2.3</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
+                    <webResources>
+                        <!-- Añadimos versión de dependencias al web.xml -->
+                        <resource>
+                            <directory>${basedir}/src/main/webapp/WEB-INF</directory>
+                            <filtering>true</filtering>
+                            <targetPath>WEB-INF</targetPath>
+                            <includes>
+                                <include>**/web.xml</include>
+                            </includes>
+                        </resource>
+                    </webResources>
                 </configuration>
             </plugin>
             <plugin>
