- Reescrita función getSessionFactory().

--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -5,7 +5,7 @@
 # PostgreSQL properties
 postgresql.driver=org.postgresql.Driver
 postgresql.url=jdbc:postgresql://localhost:5432/Project
-postgresql.user=postgres
+postgresql.username=postgres
 postgresql.password=postgres
 
 # Hibernate properties
