--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <hibernate.version>5.2.10.Final</hibernate.version>
         <postgresql.version>42.1.1</postgresql.version>
         <servlet-api.version>3.1.0</servlet-api.version>
+        <jsp-api.version>2.3.1</jsp-api.version>
         <jstl.version>1.2</jstl.version>
         <webjars-locator.version>0.32-1</webjars-locator.version>
         <bootstrap.version>3.3.7</bootstrap.version>
@@ -74,7 +75,15 @@
             <version>${servlet-api.version}</version>
             <scope>provided</scope>
         </dependency>
-
+        
+        <!-- JSP -->
+        <dependency>
+            <groupId>javax.servlet.jsp</groupId>
+            <artifactId>javax.servlet.jsp-api</artifactId>
+            <version>${jsp-api.version}</version>
+            <scope>provided</scope>
+        </dependency>
+         
         <!-- JSTL -->
         <dependency>
             <groupId>javax.servlet</groupId>
